# portfolio

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  PRODUCT.md  README.md  bunfig.toml  package.json  pipeline-skill.md  resume.md  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
.impeccable/live/: config.json
apps/ai-service/: Dockerfile  fly.toml  main.py  pyproject.toml  rag.py  seed.py
apps/ai-service/tests/: test_rag.py
apps/ecom-backend/: Dockerfile  fly.toml  package.json
apps/ecom-backend/src/: db.ts  index.ts  rabbitmq.ts
apps/ecom-backend/test/: checkout.test.ts
apps/ecom-frontend/: fly.toml  index.html  package.json  tsconfig.json  vite.config.ts
apps/ecom-frontend/src/: App.tsx
apps/payment-backend/: Dockerfile  fly.toml  go.mod  handler.go  handler_test.go  main.go  store.go
apps/payment-frontend/: fly.toml  index.html  package.json  tsconfig.json  vite.config.ts
apps/portfolio-web/: Dockerfile  fly.toml  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/telemed-backend/: Dockerfile  fly.toml  package.json
apps/telemed-frontend/: fly.toml  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/trade-backend/: Dockerfile  fly.toml  package.json
apps/trade-frontend/: Dockerfile  fly.toml  index.html  package.json  vite.config.ts
docker/: docker-compose.infra.yml  docker-compose.yml
docs/adr/: 0001-monorepo-for-microservices.md  0002-hybrid-communication.md  0003-dual-message-brokers.md  0004-flyio-deployment.md  0005-oauth-pkce-from-scratch.md
(+21 files in other folders)
