[project]
name = "portfolio-ai-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-qdrant>=0.2.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.28.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
